faet: fix problems with content overflowing, add word-break: break-word for body, and add flex-wrap: wrap for some flex elements

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
 	line-height: 22px;
 	font-weight: 400;
 	color: rgb(255, 255, 255);
+	word-break: break-word;
 
 	background-color: rgb(132, 157, 143);
 	background-image: url(../img/slider-1.png);
@@ -68,12 +69,16 @@ a {
 	display: flex;
 	-webkit-box-pack: justify;
 	    -ms-flex-pack: justify;
-	        justify-content: space-between;
+          justify-content: space-between;
+	flex-wrap: wrap;
 }
 
 .btn {
 	display: inline-block;
-	margin: 0;
+	margin-top: 5px;
+	margin-right: 5px;
+	margin-bottom: 5px;
+	margin-left: 5px;
 	padding-top: 10px;
 	padding-right: 25px;
 	padding-bottom: 10px;
@@ -144,6 +149,8 @@ a {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
+	flex-wrap: wrap;
+	max-width: 700px;
 	margin-top: 13px;
 	padding: 0;
 
@@ -296,6 +303,7 @@ a {
 }
 
 .user-navigation-item {
+	max-width: 150px;
 	margin-left: 10px;
 	padding: 0;
 }
@@ -320,7 +328,6 @@ a {
 	background-color: rgba(255, 255, 255, .2);
 	border-radius: 15px;
 
-	overflow: hidden;
 }
 
 .user-navigation-link:hover,
@@ -387,9 +394,9 @@ a {
 	position: absolute;
 	top: 35px;
 	right: 125px;
-	
+
 	padding-top: 20px;
-	padding-right: 15px;
+	padding-right: 18px;
 	padding-bottom: 23px;
 	padding-left: 20px;
 
@@ -420,7 +427,7 @@ a {
 }
 
 .login-help {
-	width: 130px;
+	max-width: 120px;
 }
 
 .login-reg {
@@ -446,9 +453,9 @@ a {
 
 .btn-login {
 	margin-top: auto;
-	margin-right: 18px;
+	margin-right: 15px;
 	margin-bottom: auto;
-
+	margin-left: 0;
 }
 /*END of Login Form in User Navigation*/
 
@@ -595,6 +602,7 @@ a {
 
 /*Breadcrumbs*/
 .breadcrumbs {
+	max-width: 800px;
 	padding-top: 22px;
 }
 
@@ -602,6 +610,7 @@ a {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
+	flex-wrap: wrap;
 	margin: 0;
 	padding: 0;
 
@@ -748,11 +757,12 @@ a {
 
 /*Promo Section*/
 .offers {
-	margin-bottom: 40px;
+	margin-bottom: 20px;
 }
 
 .offers-item {
 	width: 520px;
+	margin-bottom: 20px;
 	padding-top: 15px;
 	padding-right: 20px;
 	padding-bottom: 25px;
@@ -761,8 +771,7 @@ a {
 	text-align: right;
 
 	background-position: top left;
-	background-repeat: no-repeat;
-	background-size: cover;
+	background-repeat: repeat;
 	border-radius: 15px;
 }
 
@@ -880,9 +889,9 @@ a {
 	padding-left: 20px;
 
 	background-color: rgb(255, 255, 255);
-	background-image: url(../img/bg-strawberry.png);
+	background-image: url(../img/bg-strawberry.jpg);
 	background-repeat: no-repeat;
-	background-position: top left 208px;
+	background-position: top -40px left 200px;
 	border-radius: 15px;
 }
 
@@ -936,7 +945,7 @@ a {
 	padding-right: 20px;
 	padding-bottom: 33px;
 	padding-left: 20px;
-	
+
 	background-color: rgb(248, 247, 243);
 	border-radius: 15px;
 }
@@ -1044,7 +1053,7 @@ a {
 	z-index: 1;
 }
 
-.product:hover:after {
+.product:hover::after {
 	background-color: rgba(255, 255, 255, .2);
 	-webkit-box-shadow: 0 10px 20px 0 rgba(0, 0, 0, .2);
 	        box-shadow: 0 10px 20px 0 rgba(0, 0, 0, .2);
@@ -1079,9 +1088,7 @@ a {
 	font-weight: 500;
 
 	-webkit-box-ordinal-group: 2;
-
 	    -ms-flex-order: 1;
-
 	        order: 1;
 	z-index: 2;
 }
@@ -1118,7 +1125,6 @@ a {
 	font-weight: 700;
 	text-align: left;
 	text-shadow: 1px 1px 3px rgba(49, 50, 53, .5);
-	word-break: break-word;
 }
 
 .product-price-kg {
@@ -1135,13 +1141,15 @@ a {
 
 .btn-product {
 	position: absolute;
-	bottom: -52px;
-	left: 35px;
-
+	top: 325px;
+	right: 25px;
+	left: 25px;
 	padding-right: 15px;
 	padding-left: 15px;
 
 	z-index: 2;
+	    -ms-flex-order: 1;
+	order: 2;
 
 	display: none;
 }
@@ -1217,8 +1225,8 @@ a {
 
 .pagination-item-prev svg {
 	-webkit-transform: rotate(180deg);
-	    -ms-transform: rotate(180deg);
-	        transform: rotate(180deg);
+		  -ms-transform: rotate(180deg);
+		      transform: rotate(180deg);
 }
 /*END of Pagination*/
 
@@ -1314,6 +1322,8 @@ a {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
+	flex-wrap: wrap;
+	max-width: 300px;
 	padding: 0;
 
 	list-style: none;
@@ -1350,6 +1360,7 @@ a {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
+	flex-wrap: wrap;
 	margin-top: 12px;
 	padding-bottom: 5px;
 }
@@ -1601,7 +1612,7 @@ a {
 
 .filter-assortment {
 	position: relative;
-	
+
 	width: 193px;
 	height: 36px;
 	margin: 0;
@@ -1676,7 +1687,7 @@ a {
 
 .range-controls {
 	position: relative;
-	
+
 	width: 200px;
 	height: 20px;
 	padding-top: 16px;
@@ -1806,9 +1817,8 @@ a {
 }
 
 .filter-btn {
-	display: inline-block;
-	vertical-align: middle;
-	
+	min-width: 145px;
+	height: 100%;
 	margin-top: 22px;
 	padding-top: 7px;
 	padding-right: 26px;
@@ -1950,7 +1960,7 @@ a {
 	height: 100%;
 
 	background-color: rgba(0, 0, 0, .3);
-	
+
 	z-index: 9999;
 }
 /*END of Feedback Close Button*/
